--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,11 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/node": "20.12.4",
+    "@types/react": "18.2.74",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.4.4"
   }
 }
